# identicon

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
.github/workflows/: image.yaml
src/: colors.rs  lib.rs  main.rs  nibbler.rs  utils.rs
