[package]
name = "identicon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
bytes = "1.4"
clap = { version = "4.1", features = ["derive"] }
faststr = "0.2.1"
hex = "0.4.3"
humantime = "2.1"
image = { version = "0.24.5", default-features = false, features = ["png"] }
lru = "0.10.0"
md-5 = "0.10.5"
tokio = { version = "1.26", features = ["full"] }
tower = { version = "0.4.13", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
