[package]
name = "identicon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
bytes = "1.5.0"
faststr = "0.2.18"
hex = "0.4.3"
image = { version = "0.25.0", default-features = false, features = ["png"] }
md-5 = "0.10.6"
quick_cache = "0.4.1"
shuttle-axum = "0.41.0"
shuttle-runtime = "0.41.0"
tokio = "1.36.0"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
